@@ -32,6 +32,7 @@
 - Выделение коревой директории клавишей Space
 - Обработка выделенной корневой директории.
 - Создание нового файла.
+- Стиль выделения в Опере.
 
 **Обновлены:**
 - jquery до версии v2.0.0
