@@ -83,6 +83,8 @@ is pressed and current file is directory.
 
 * Improved CloudFunc module.
 
+* Fixed selection style in opera.
+
 
 2012.03.01, v0.1.9
 
